{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 12,
  "lineage": "b3f6d65e-ffb8-b182-0995-94043751d3e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d99f57adcd33b20a",
            "arn": "arn:aws:ec2:us-east-1:854551250341:elastic-ip/eipalloc-0d99f57adcd33b20a",
            "association_id": "eipassoc-017f66705de4f8545",
            "domain": "vpc",
            "id": "eipalloc-0d99f57adcd33b20a",
            "instance": "i-09894d30a2186f7d9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-051749f50e2825797",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-50-17-6-168.compute-1.amazonaws.com",
            "public_ip": "50.17.6.168",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "expense-tracker-eip"
            },
            "tags_all": {
              "Name": "expense-tracker-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app_server",
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:854551250341:instance/i-09894d30a2186f7d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09894d30a2186f7d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "expense-tracker-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051749f50e2825797"
              }
            ],
            "primary_network_interface_id": "eni-051749f50e2825797",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-44-220-172-173.compute-1.amazonaws.com",
            "public_ip": "44.220.172.173",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad63da576f1f3ef0",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0823699f66e85b113",
            "tags": {
              "Environment": "production",
              "Name": "expense-tracker-server",
              "Project": "expense-tracker"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-tracker-server",
              "Project": "expense-tracker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d22b42b0a362f6f7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854551250341",
            "id": "i-09894d30a2186f7d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854551250341:internet-gateway/igw-0260a60336cfcb936",
            "id": "igw-0260a60336cfcb936",
            "owner_id": "854551250341",
            "region": "us-east-1",
            "tags": {
              "Name": "expense-tracker-igw"
            },
            "tags_all": {
              "Name": "expense-tracker-igw"
            },
            "vpc_id": "vpc-0adcf71a56be68fad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854551250341:route-table/rtb-03201499efc7d8af3",
            "id": "rtb-03201499efc7d8af3",
            "owner_id": "854551250341",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0260a60336cfcb936",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "expense-tracker-public-rt"
            },
            "tags_all": {
              "Name": "expense-tracker-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adcf71a56be68fad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854551250341",
            "id": "rtb-03201499efc7d8af3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036bc48a51c47f2ce",
            "region": "us-east-1",
            "route_table_id": "rtb-03201499efc7d8af3",
            "subnet_id": "subnet-0823699f66e85b113"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854551250341:security-group/sg-0d22b42b0a362f6f7",
            "description": "Security group for Expense Tracker EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d22b42b0a362f6f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node.js Backend",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "React Frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "expense-tracker-ec2-sg",
            "name_prefix": "",
            "owner_id": "854551250341",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "expense-tracker-ec2-sg"
            },
            "tags_all": {
              "Name": "expense-tracker-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adcf71a56be68fad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854551250341",
            "id": "sg-0d22b42b0a362f6f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854551250341:subnet/subnet-0823699f66e85b113",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0823699f66e85b113",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854551250341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "expense-tracker-public-subnet"
            },
            "tags_all": {
              "Name": "expense-tracker-public-subnet"
            },
            "vpc_id": "vpc-0adcf71a56be68fad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854551250341",
            "id": "subnet-0823699f66e85b113",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854551250341:vpc/vpc-0adcf71a56be68fad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02062c398a87bcd0e",
            "default_route_table_id": "rtb-0d09f09f398791ffd",
            "default_security_group_id": "sg-0418d0a717e598899",
            "dhcp_options_id": "dopt-0e6cabc9ecdd70491",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0adcf71a56be68fad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d09f09f398791ffd",
            "owner_id": "854551250341",
            "region": "us-east-1",
            "tags": {
              "Name": "expense-tracker-vpc"
            },
            "tags_all": {
              "Name": "expense-tracker-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854551250341",
            "id": "vpc-0adcf71a56be68fad",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}